<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    tools:context=".LanguageActivity">
    <LinearLayout
        android:layout_marginTop="@dimen/outerMargin"
        android:background="@drawable/back_ground"
        android:layout_width="match_parent"
        android:layout_height="@dimen/back_ground">
        <ImageView
            android:id="@+id/iv_back"
            android:src="@drawable/leftjiantou"
            android:layout_marginLeft="@dimen/energyTvHeight"
            android:layout_marginRight="@dimen/energyTvHeight"
            android:layout_width="@dimen/voltageTitleHeight"
            android:layout_height="@dimen/voltageTitleHeight"/>
        <TextView
            android:text="@string/menu_language_title"
            android:textColor="#000000"
            android:textSize="@dimen/font20"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>
    <Button
        android:id="@+id/tv_chinese"
        android:text="@string/chinese"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/outerMargin"
        android:stateListAnimator="@null"
        android:textSize="@dimen/fontNum"
        android:textAllCaps="false"
        android:background="@color/colorWhite"
        android:layout_width="match_parent"
        android:textColor="@color/colorBackground"
        android:layout_height="@dimen/languageTextHeight"/>
    <TextView
        android:background="@color/wifiBtnBackground"
        android:layout_width="match_parent"
        android:layout_height="1px"/>
    <Button
        android:id="@+id/tv_english"
        android:text="@string/english"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/outerMargin"
        android:stateListAnimator="@null"
        android:textSize="@dimen/fontNum"
        android:textAllCaps="false"
        android:background="@color/colorWhite"
        android:layout_width="match_parent"
        android:textColor="@color/colorBackground"
        android:layout_height="@dimen/languageTextHeight"/>
    <TextView
        android:background="@color/wifiBtnBackground"
        android:layout_width="match_parent"
        android:layout_height="1px"/>

    <Button
        android:id="@+id/tv_TW"
        android:text="@string/chinese_TW"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/outerMargin"
        android:stateListAnimator="@null"
        android:textSize="@dimen/fontNum"
        android:textAllCaps="false"
        android:background="@color/colorWhite"
        android:layout_width="match_parent"
        android:textColor="@color/colorBackground"
        android:layout_height="@dimen/languageTextHeight"/>
    <TextView
        android:background="@color/wifiBtnBackground"
        android:layout_width="match_parent"
        android:layout_height="1px"/>

    <Button
        android:id="@+id/btn_ja"
        android:text="@string/ja"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/outerMargin"
        android:stateListAnimator="@null"
        android:textSize="@dimen/fontNum"
        android:textAllCaps="false"
        android:background="@color/colorWhite"
        android:layout_width="match_parent"
        android:textColor="@color/colorBackground"
        android:layout_height="@dimen/languageTextHeight"/>
    <TextView
        android:background="@color/wifiBtnBackground"
        android:layout_width="match_parent"
        android:layout_height="1px"/>

</LinearLayout>