<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".AboutActivity">
    <ImageView
        android:id="@+id/iv_head_logo"
        app:srcCompat="@drawable/logo_big1"
        android:layout_width="@dimen/logoWidth"
        android:layout_height="@dimen/logoHeight"/>

    <TextView
        android:id="@+id/tv_aboutContentOne"
        android:text="@string/aboutContentOne"
        android:textColor="@color/wifiFont"
        android:textSize="@dimen/fontNum"
        android:letterSpacing="0.06"
        android:layout_marginLeft="@dimen/outerMargin"
        android:layout_marginRight="@dimen/outerMargin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tv_aboutContentTwo"
        android:text="@string/aboutContentTwo"
        android:textColor="@color/wifiFont"
        android:textSize="@dimen/fontNum"
        android:letterSpacing="0.06"
        android:layout_marginLeft="@dimen/outerMargin"
        android:layout_marginRight="@dimen/outerMargin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tv_aboutTitle"
        android:text="@string/aboutTitle"
        android:textSize="@dimen/font22"
        android:layout_marginTop="@dimen/voltageTitleHeight"
        android:layout_marginBottom="@dimen/outerMargin"
        android:textColor="@color/colorBackground"
        android:letterSpacing="0.06"
        android:layout_gravity="right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


</LinearLayout>